[tool.poetry]
name = "speedograph-py"
version = "0.1.0"
description = "Analyze trends in your typing from the typeracer database"
authors = ["FuexFollets <fuex9follets@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "./speedograph"},
    {include = "./tests"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
aiohttp = "^3.8.6"
parse = "^1.19.1"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
